<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AseHackathon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="new_user_register_here_">New user? Register here!</string>
    <string name="login_with_fb">Login with Fb</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_place_map">PlaceMapActivity</string>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="location">Enter Location</string>
    <string name="search">Search</string>
    <string name="speak">Speak</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>

</resources>
