<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/enterUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

            <TextView
                android:id="@+id/enterPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <Button
                android:id="@+id/fbLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_with_fb" />

            <TextView
                android:id="@+id/register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/new_user_register_here_" 
                android:textSize="20dip"
                android:textColor="#025f7c"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>